--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A&I Med E-books - Neuroanatomia</title>
+    <title>A&I Med E-books - Neuroanatomia Prática</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="static/css/style.css">
     <script src="static/js/script.js"></script>
-    <meta property="og:title" content="A&I Med E-books - Neuroanatomia">
+    <meta property="og:title" content="A&I Med E-book - Neuro Prática">
     <meta property="og:description" content="VENHA CONHECER TODOS OS DETALHES DESSE MATERIAL">
-    <meta property="og:image" content="https://aimedneuratonomia.vercel.app/static/imgs/header.jpeg">
-    <meta property="og:url" content="https://aimedneuratonomia.vercel.app/">
+    <meta property="og:image" content="https://aimedneuropratica.vercel.app/static/imgs/header.jpeg">
+    <meta property="og:url" content="https://aimedneuropratica.vercel.app/">
     <meta property="og:type" content="website">
 </head>
 <body>
