--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="static/js/script.js"></script>
     <meta property="og:title" content="A&I Med E-book - Neuro Prática">
     <meta property="og:description" content="VENHA CONHECER TODOS OS DETALHES DESSE MATERIAL">
-    <meta property="og:image" content="https://aimedneuropratica.vercel.app/static/imgs/header.jpeg">
+    <meta property="og:image" content="https://aimedneuropratica.vercel.app/static/imgs/header.png">
     <meta property="og:url" content="https://aimedneuropratica.vercel.app/">
     <meta property="og:type" content="website">
 </head>
