--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
             <div class="faq-item">
                 <div class="faq-question">4) O pagamento pode ser parcelado? Quais são as formas de pagamento aceitas?</div>
                 <div class="faq-answer">
-                    ⚠️Como opções de pagamento temos PIX, cartão de DÉBITO e CRÉDITO (aceitamos parcelamento em até 2x). Todo o pagamento é feito no site da Kiwify, 100% seguro. ❗❗<br><br>
+                    ⚠️Como opções de pagamento temos PIX, cartão de DÉBITO e CRÉDITO 1x. Todo o pagamento é feito no site da Kiwify, 100% seguro. ❗❗<br><br>
                     Opção de pagamento exclusiva para alunos UnirG Paraíso:<br>
-                    💳 Caso você queira pagar pelo cartão de débito ou crédito (parcelamento em até 2x) e ocorra algum erro no site da Kiwify na hora do pagamento, me encontre presencialmente na UnirG e você fará o pagamento através do aplicativo Infinitypay que está instalado em meu celular, nesse aplicativo eu consigo realizar o seu pagamento ao aproximar o seu cartão físico da tela do celular.<br><br>
+                    💳Caso você queira pagar pelo cartão de débito ou crédito 1x e ocorra algum erro no site da Kiwify na hora do pagamento, me encontre presencialmente na UnirG e você fará o pagamento através do aplicativo Infinitypay que está instalado em meu celular, nesse aplicativo eu consigo realizar o seu pagamento ao aproximar o seu cartão físico da tela do celular.<br><br>
                     🚨 Caso você queira o pagamento no DÉBITO OU CRÉDITO aperte no botão abaixo e fale comigo:
                     <a href="https://api.whatsapp.com/send/?phone=5563999462285&text=Oii+Icaro%2C+tenho+interesse+em+realizar+o+pagamento+pelo+cart%C3%A3o+de+cr%C3%A9dito%2Fd%C3%A9bito+como+podemos+prosseguir%3F+&type=phone_number&app_absent=0" class="cta-button whatsapp-button">
                         <i class="fab fa-whatsapp"></i> FALE COMIGO NO WHATSAPP
