--- a/index.html
+++ b/index.html
@@ -302,14 +302,13 @@
                 <div class="faq-answer">👇Bom, será da seguinte forma:<br><br>
 
                     ✅Após você preencher todas as informações na aba e realizar o pagamento, você será redirecionado(a) para a área de membros da própria Kiwify e lá terá acesso à todo o material.<br><br>
-                    
+
                     📢É valido lembrar que: O e-mail preenchido na hora da compra é o e-mail da sua conta na Kiwify e também a SENHA para abrir cada PDF.<br><br>
-                    
+
                     🤔E os AUTO-TESTES da parte PRÁTICA?<br>
                     - O envio desse material em específico depende da sua escolha!<br>
-                    - Qual devo escolher? Volte na pergunta 01 que explicamos melhor.<br><br>
-                    - A depender da forma que você escolheu eu irei de enviar no WhatsApp juntamente com os vídeos ensinando passo a passo de como colocar.
-                    - 📢 As orientações para receber os AUTO-TESTES estão dentro do E-book e você terá acesso após o pagamento e redirecionamento para a aba de membros.</div>
+                    - Qual devo escolher? Volte na pergunta 01 que explicamos melhor.<br>
+                    - Lá dentro da sua conta da Kiwify, ao acessar o material, terá um módulo escrito: "AUTO-TESTE PRÁTICA". Lá terá todas as informações para você acessar ao seu modelo escolhido.</div>
             </div>
         </section>
 
